# GuardNest

./: README.md
children-app/: .gitignore  index.html  package.json  pnpm-lock.yaml  proxy_system_flowchart.md
children-app/docs/: certificates.md  disable_system_proxy.md  enable_system_proxy.md  get_proxy_status.md  handle_client.md  http_service.md  proxy_logger.md  restart_proxy.md  run_proxy.md  tunnel_stream.md  windows_system_proxy.md
children-app/src/: App.tsx  main.tsx
children-app/src-tauri/: Cargo.toml  tauri.conf.json
children-app/src-tauri/src/: lib.rs  logger.rs  main.rs
children-app/src-tauri/src/windows/: account.rs  certificate.rs  mod.rs  proxy.rs  screen_record.rs  system.rs
children-app/src-tauri/src/windows/http_service/: fetch.rs
children-app/src/components/: ProxyStatus.tsx  is-admin-check.tsx  stepper.tsx
children-app/src/services/: WebsiteLogger.ts
database/: docker-compose.yml  main.sql
landing-page-web/: package.json  pnpm-lock.yaml
landing-page-web/app/: globals.css  layout.tsx  page.tsx
landing-page-web/components/: border-accent.tsx  cta-section.tsx  dashboard-preview.tsx  faq-section.tsx  feature-cards.tsx  footer-section.tsx  hero-section.tsx  navbar.tsx  pricing-section.tsx  testimonials-section.tsx  theme-toggle.tsx
landing-page-web/components/GlassElement/: GlassElement.module.css  GlassElement.tsx  getDisplacementFilter.ts  getDisplacementMap.ts
landing-page-web/components/ui/: button.tsx
parental-dashboard-web/: next.config.ts  package.json  pnpm-lock.yaml
parental-dashboard-web/src/app/: layout.tsx  page.tsx
parental-dashboard-web/src/components/: app-sidebar.tsx  blocked-websites.tsx  radial-usage-time-chart.tsx  theme-cookie-sync.tsx  website-activity-tracker.tsx
parental-dashboard-web/src/hooks/: use-media-query.ts  use-navigation.tsx  use-sidebar.ts
parental-dashboard-web/src/lib/: auth-client.ts  auth-fetch.ts  auth.ts  db.ts  mock-data.ts  server-session.ts  (+1 more)
server/: go.mod  main.go
server-go/: .env  .env.local  go.mod  go.sum
service-overview-web/: pnpm-lock.yaml
(+44 files in other folders)
