[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
regex = "1.11"

windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinInet",
    "Win32_NetworkManagement_WindowsFirewall",
    "Wdk_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",

    "Win32_Graphics_Dxgi",


] }


# Para parsing de pacotes de rede
etherparse = "0.14"

# Para operações assíncronas
tokio = { version = "1.47.1", features = ["full"] }

# Serialização para comunicação com frontend
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# UUID para gerar IDs únicos
uuid = { version = "1.0", features = ["v4"] }


once_cell = "1.21.3"


hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-tls = "0.6.0"
hyper-util = "0.1.11"
chrono = "0.4.41"

# For encoding frames to PNG and base64 for frontend preview
image = { version = "0.25", default-features = false, features = ["png", "gif", "jpeg"] }
base64 = "0.22"


rcgen = "0.14.3"
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.8"
